# Fin.hs

./: Fin.cabal  LICENSE
Data/: Ap.hs  Fin.hs
Data/Fin/: List.hs  Permutation.hs  Private.hs
