name:                Fin
version:             0.2.0.0
synopsis:            Finite totally-ordered sets
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       peano
  exposed-modules:     Data.Fin
  other-modules:       Data.Ap
  build-depends:       base >=4.7 && <5
                     , clist >=0.2 && <0.3
                     , natural-induction >=0.2 && <0.3
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , FlexibleInstances
                     , PolyKinds
                     , DataKinds
                     , GADTs
                     , StandaloneDeriving
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
