name:                Fin
version:             0.2.8.0
synopsis:            Finite totally-ordered sets
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

flag foldable1

library
  build-depends:       peano
  exposed-modules:     Data.Fin
                     , Data.Fin.List
                     , Data.Fin.Permutation
  other-modules:       Data.Ap
                     , Data.Fin.Private
  build-depends:       alg >=0.2.5 && <0.3
                     , natural-induction >=0.2 && <0.3
                     , universe-base >=1.0 && <1.1
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , PartialTypeSignatures
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , FlexibleInstances
                     , PolyKinds
                     , DataKinds
                     , GADTs
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Wno-name-shadowing -Wno-unticked-promoted-constructors
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

  if flag (foldable1)
    build-depends:     base >=4.7 && <4.17
                     , foldable1 >=0.1 && <0.2
  else
    build-depends:     base >=4.17 && < 5
